--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.12",
     "@tanstack/react-query": "^5.85.5",
+    "@tanstack/react-router": "^1.131.31",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "react": "^19.1.1",
